[project]
name = "tutunsabri"
version = "0.1.0"
description = "Async Telegram bot for TCDD YHT monitoring"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.22.0",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "taskiq-redis>=1.1.2",
    "taskiq[redis]>=0.11.20",
]

[project.scripts]
tutunsabri = "bot:main"
